--- a/auctions/static/auctions/styles.css
+++ b/auctions/static/auctions/styles.css
@@ -1,3 +1,65 @@
 body {
-    padding: 10px;
+  padding: 10px;
 }
+#header {
+  text-align: center;
+}
+#header h1 {
+  text-align: center;
+  font-family: initial;
+  font-style: italic;
+}
+#title {
+  font-size:24px;
+}
+#activelistings {
+  text-align:center;
+  color:silver;
+  font-style: italic;
+  margin:40px;
+}
+#listings {
+  border:2px solid silver;
+  margin:5px;
+}
+#listings img {
+  max-width:100%;
+  margin: 20px 0px 20px 0px;
+  border:solid 1px silver;
+}
+.info {
+  padding: 30px;
+}
+.info p {
+  margin:8px;
+}
+#comments {
+  padding:40px;
+  margin: 40px;
+}
+.comment {
+  border:solid silver;
+  margin:15px;
+  padding:17px;
+}
+#usernameComment {
+  margin-bottom:12px;
+  font-size:14px;
+}
+#commentText {
+  font-size:18px;
+  margin-bottom:15px;
+}
+hr {
+  border-width: 2px;
+  border-color:black;
+}
+#watchlist {
+  text-align: right;
+}
+#watchlist button {
+  border-radius: 4px;
+  border: solid silver 2px;
+}
+
+/*# sourceMappingURL=styles.css.map */
