--- a/auctions/templates/auctions/create.html
+++ b/auctions/templates/auctions/create.html
@@ -1,13 +1,13 @@
 {% extends 'auctions/layout.html' %}
-
+{% load crispy_forms_tags %}
 {% block title %} Create Listing {% endblock %}
 
 {% block body %}
     {% if user.is_authenticated %}
     <form method="POST" enctype="multipart/form-data">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Upload</button>
+        {{ form|crispy }}
+        <button class="btn btn-primary" type="submit">Save Auction</button>
     </form>
     {% else %}
     You need to <a href= "{% url 'login' %}"> log in </a> in order to be able to create a listing.
