--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -1,19 +1,34 @@
 {% extends "auctions/layout.html" %}
 
 {% block body %}
-    <h2>Active Listings</h2>
+    <h2 id="activelistings"><u>Active Listings</u></h2>
     <ul>
     {% for name in listings %}
-       <li style="margin-bottom: 40px;">Name of the listing:<span style="font-weight: bold; text-transform: capitalize;"> {{ name.title}} </span><br>
-           <img src= "{{ name.image.url }}" alt = "content" style="max-height:300px ;"> <br>
-           Starting Bid: {{ name.startingBid }}<br>
-            Description: {{ name.description }}<br>
-            Category: {{ name.category }}
-            Listed by: {{ name.listedBy }}
-            Date listed: {{ name.createdOn|date:"H:i m/d/Y " }}
-       </li>
+    <div class="row" id="listings">
+        <div class="col-5">
+            {% if name.image %}
+                <div class="container" style="text-align: center;">
+                    <img src= "{{ name.image }}" alt = "content" style="height:300px; ">
+                </div>
+            {% else %}
+                <img src= "http://kargoex.com/assets/images/no-image-available.jpg">
+            {% endif %}
+        </div>
+        <div class="col-6 info">
+            <p><a href="{% url 'listing_page' name.id %} "></p>
+            <p><span style="font-weight: bold; text-transform: capitalize;"> {{ name.title }} </span><br></a></p>
+            <p>Description: {{ name.description }}<br></p>
+            <p>Listed by: {{ name.listedBy }}<br></p>
+            <p>Created: {{ name.createdOn|date:" d M Y H:i" }}h<br></p>
+            <p>Category: {{ name.category }}<br></p>
+            {% if name.bids.max %}
+                <p style="margin-top: 49px;font-size:20px;"><span style="color:red;">Current price:</span> {{ name.bids.max }}$<br></p>
+            {% else %}
+                <p style="margin-top: 49px;font-size:20px;"><span style="color:red;">Current price:</span> {{ name.startingBid }}$<br></p>
+            {% endif %}
+        </div>
+    </div>
     {% empty %}
-    <h1> No listings available</h1>
     {% endfor %}
     </ul>
 {% endblock %}
