--- a/auctions/templates/auctions/watchlist.html
+++ b/auctions/templates/auctions/watchlist.html
@@ -4,22 +4,35 @@
 {% endblock %}
 {% block body %}
 	{% if user.is_authenticated and watchlist %}
-		{% for listing in watchlist %}
-		<li style="margin-bottom: 40px;">Name of the listing:<a href="{% url 'listing_page' listing.id %} ">
-           <span style="font-weight: bold; text-transform: capitalize;"> {{ listing.title}} </span><br></a>
-           <img src= "{{ listing.image }}" alt = "content" style="max-height:300px ;"> <br>
-          
-            Description: {{ listing.description }}<br>
-            Listed by: {{ listing.listedBy }}<br>
-            Created on: {{ listing.createdOn|date:" d M Y H:i" }}h<br>
-			Category: {{ listing.category }}<br>
-			{% if name.bids.max %}
-                <p style="margin-top: 49px;font-size:20px;"><span style="color:red;">Current price:</span> {{ listing.bids.max }}$<br></p>
-            {% else %}
-                <p style="margin-top: 49px;font-size:20px;"><span style="color:red;">Current price:</span> {{ listing.startingBid }}$<br></p>
-            {% endif %}	
-	   </li>
-		{% endfor %}
+	<h2 style="margin:50px;"> Listings in your watchlist:</h2>
+    {% for name in watchlist %}
+		<div class="container">
+			<div class="row" id="listings">
+				<div class="col-5">
+					{% if name.image %}
+						<div class="container" style="text-align: center;">
+							<img src= "{{ name.image }}" alt = "content" >
+						</div>
+					{% else %}
+						<img src= "http://kargoex.com/assets/images/no-image-available.jpg">
+					{% endif %}
+				</div>
+				<div class="col-6 info">
+					<p><a href="{% url 'listing_page' name.id %} "></p>
+					<p><span style="font-weight: bold; text-transform: capitalize;"> {{ name.title }} </span><br></a></p>
+					<p>Description: {{ name.description }}<br></p>
+					<p>Listed by: {{ name.listedBy }}<br></p>
+					<p>Created on: {{ name.createdOn|date:" d M Y H:i" }}h<br></p>
+					<p>Category: {{ name.category }}<br></p>
+					{% if name.bids.max %}
+						<p style="margin-top: 49px;font-size:20px;"><span style="color:red;">Current price:</span> {{ name.bids.max }}$<br></p>
+					{% else %}
+						<p style="margin-top: 49px;font-size:20px;"><span style="color:red;">Current price:</span> {{ name.startingBid }}$<br></p>
+					{% endif %}
+				</div>
+			</div>
+		</div>
+    {% endfor %}	
 	{% elif user.is_authenticated and not watchlist %}
 	   <h3>Your watchlist is empty.</h3>
 	{% else %}
