--- a/auctions/templates/auctions/index.html
+++ b/auctions/templates/auctions/index.html
@@ -8,7 +8,7 @@
         <div class="col-5">
             {% if name.image %}
                 <div class="container" style="text-align: center;">
-                    <img src= "{{ name.image }}" alt = "content" style="height:300px; ">
+                    <img src= "{{ name.image }}" alt = "content" >
                 </div>
             {% else %}
                 <img src= "http://kargoex.com/assets/images/no-image-available.jpg">
@@ -19,7 +19,7 @@
             <p><span style="font-weight: bold; text-transform: capitalize;"> {{ name.title }} </span><br></a></p>
             <p>Description: {{ name.description }}<br></p>
             <p>Listed by: {{ name.listedBy }}<br></p>
-            <p>Created: {{ name.createdOn|date:" d M Y H:i" }}h<br></p>
+            <p>Created on: {{ name.createdOn|date:" d M Y H:i" }}h<br></p>
             <p>Category: {{ name.category }}<br></p>
             {% if name.bids.max %}
                 <p style="margin-top: 49px;font-size:20px;"><span style="color:red;">Current price:</span> {{ name.bids.max }}$<br></p>
@@ -29,6 +29,7 @@
         </div>
     </div>
     {% empty %}
+        <h2>No listings available.</h2>
     {% endfor %}
     </ul>
 {% endblock %}
